--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,5 +28,6 @@
         android:layout_alignTop="@+id/tempuratureLabel"
         android:layout_toRightOf="@+id/tempuratureLabel"
         android:layout_toEndOf="@+id/tempuratureLabel"
-        android:src="@drawable/degree"/>
+        android:src="@drawable/degree"
+        android:layout_marginTop="50dp"/>
 </RelativeLayout>
